@@ -27,6 +27,8 @@ Version 1.5.6+svn:
    * Added a border and blurring to story screens' text blocks.
    * Improved wrapping in the new widgets.
    * Improved easy close handling.
+ * WML engine:
+   * Added the 'round' key to [set_variable].
  * Miscellaneous and bug fixes:
    * Included extra headers for certain g++ versions (patch #1113).
 
